--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <nav>
+            <nav class="right-text">
                 <ul>
                     <li><a href="https://github.com/aturner1995">Github</a></li>
                     <li><a href="#">Porfolio</a></li>
@@ -20,35 +20,31 @@
         </header>
 
         <main>
-            <h1>My New Website</h1>
+            <h1 class="center-text">My New Website</h1>
             <figure>
                 <img src="./assets/images/image_1.png" alt="coming soon">
-                <figcaption>Coming Soon</figcaption>
+                <figcaption class="center-text">Coming Soon</figcaption>
             </figure>
             <section>
                 <form>
                     <ul>
                         <li>
-                            <label>Name</label>
+                            <label class="right-text">Name:</label>
                             <input type="text" name="name-input">
                         </li>
                         <li>
-                            <label>Email</label>
+                            <label class="right-text">Email:</label>
                             <input type="email" name="email-input">                            
                         </li>                       
                     </ul>                   
-                    <div>
+                    <div class="center-text">
                         <button type="submit">Submit</button>
                     </div>
                 </form>
             </section>
         </main>
-        <footer>
+        <footer class="center-text">
             © 2022 My New Website Productions
         </footer>
-
     </body>
-
-
-
 </html>
